--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<ul class="nav navbar-nav navbar-right ml-auto">
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#servicos">SERVIÇOS</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">PORTFÓLIO</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">SOBRE NÓS</a></li>
-						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">NOSSA EQUIPE</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre-nos">SOBRE NÓS</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">UNIDADES</a></li>
 						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">CONTATO</a></li>
 					</ul>
 				</div>
@@ -136,9 +136,15 @@
 
 		<div class="container">
 			<div class="row slideanim">
-				<div class="col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4 portfolio-item">
 					<figure class="thumbnail">
 						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal1">
+							<div class="portfolio-hover">
+								<div class="portfolio-hover-content">
+									<i class="fa fa-arrow-circle-right icon-3x"></i>
+									<p>Clique para saber mais...</p>
+								</div>
+							</div>
 							<img class="img-fluid" src="img/portfolio/023.jpg" alt="Portifólio 1">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -148,9 +154,15 @@
 					</figure>
 				</div>
 
-				<div class="col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4 portfolio-item">
 					<figure class="thumbnail">
 						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal2">
+							<div class="portfolio-hover">
+								<div class="portfolio-hover-content">
+									<i class="fa fa-arrow-circle-right icon-3x"></i>
+									<p>Clique para saber mais...</p>
+								</div>
+							</div>
 							<img class="img-fluid" src="img/portfolio/forro-drywall.jpg" alt="Portifólio 2">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -160,9 +172,15 @@
 					</figure>
 				</div>
 
-				<div class="col-sm-12 col-md-4">
+				<div class="col-sm-12 col-md-4 portfolio-item">
 					<figure class="thumbnail">
 						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal3">
+							<div class="portfolio-hover">
+								<div class="portfolio-hover-content">
+									<i class="fa fa-arrow-circle-right icon-3x"></i>
+									<p>Clique para saber mais...</p>
+								</div>
+							</div>
 							<img class="img-fluid" src="img/portfolio/gesso-ou-drywall.jpg" alt="Portifólio 3">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -174,9 +192,15 @@
 			</div>
 
 			<div class="row slideanim">
-				<div class="col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4 portfolio-item">
 					<figure class="thumbnail">
 						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal4">
+							<div class="portfolio-hover">
+								<div class="portfolio-hover-content">
+									<i class="fa fa-arrow-circle-right icon-3x"></i>
+									<p>Clique para saber mais...</p>
+								</div>
+							</div>
 							<img class="img-fluid" src="img/portfolio/residencial.jpg" alt="Portifólio 4">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -186,9 +210,15 @@
 					</figure>
 				</div>
 
-				<div class="col-sm-6 col-md-4">
+				<div class="col-sm-6 col-md-4 portfolio-item">
 					<figure class="thumbnail">
 						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal5">
+							<div class="portfolio-hover">
+								<div class="portfolio-hover-content">
+									<i class="fa fa-arrow-circle-right icon-3x"></i>
+									<p>Clique para saber mais...</p>
+								</div>
+							</div>
 							<img class="img-fluid" src="img/portfolio/023.jpg" alt="Portifólio 5">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -198,9 +228,15 @@
 					</figure>
 				</div>
 
-				<div class="col-sm-12 col-md-4">
+				<div class="col-sm-12 col-md-4 portfolio-item">
 					<figure class="thumbnail">
 						<a class="portfolio-link" data-toggle="modal" href="#hpPortfolioModal6">
+							<div class="portfolio-hover">
+								<div class="portfolio-hover-content">
+									<i class="fa fa-arrow-circle-right icon-3x"></i>
+									<p>Clique para saber mais...</p>
+								</div>
+							</div>
 							<img class="img-fluid" src="img/portfolio/forro-drywall.jpg" alt="Portifólio 6">
 						</a>
 						<figcaption class="portfolio-caption">
@@ -208,6 +244,63 @@
 							<p class="text-muted">Eu sou Pica</p>
 						</figcaption>
 					</figure>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="sobre-nos" class="container-fluid">
+		<div class="row slideanim">
+			<div class="col-sm-8">
+				<h2 class="titulo-secao">Sobre Nós</h2>
+				<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="col-sm-4">
+				<span class="glyphicon glyphicon-signal logo"></span>
+			</div>
+		</div>
+	</section>
+
+	<section class="container-fluid bg-grey">
+		<div class="row slideanim">
+			<div class="col-sm-4">
+				<div class="col-sm-4">
+					<span class="glyphicon glyphicon-globe logo"></span>
+				</div>
+			</div>
+			<div class="col-sm-8">
+				<h2>Nossos Valores</h2><br>
+				<h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
+				<p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+	</section>
+
+	<section id="contato" class="container-fluid">
+		<h2 class="titulo-secao text-center">CONTATO</h2><br>
+		<div class="row">
+			<div class="col-sm-5">
+				<p>Entre em contato conosco. Nós retornaremos pra você em até 24 horas.</p>
+				<p><span class="glyphicon glyphicon-map-marker"></span> Piabeta, Duque de Caxias / RJ</p>
+				<p><span class="glyphicon glyphicon-phone"></span> 021 9999-9999</p>
+				<p><span class="glyphicon glyphicon-envelope"></span> meupenisereto@gmail.com</p>
+			</div>
+			<div class="col-sm-7 slideanim">
+				<div class="row">
+					<div class="col-sm-6 form-group">
+						<input type="text" id="txtContatoNome" name="txtContatoNome" class="form-control" placeholder="Nome">
+					</div>
+					<div class="col-sm-6 form-group">
+						<input type="text" id="txtContatoEmail" name="txtContatoEmail" class="form-control" placeholder="Email">
+					</div>
+				</div>
+				<textarea class="form-control" id="txtContatoComment" name="txtContatoComment" placeholder="Deixe seu comentário" rows="5"></textarea><br>
+				<div class="row">
+					<div class="col-sm-12 form-group">
+						<button class="btn btn-primary pull-right" type="submit">Enviar</button>
+					</div>
 				</div>
 			</div>
 		</div>
