Atualizacao do projeto 06/12/2017

--- a/index.html
+++ b/index.html
@@ -116,26 +116,29 @@
 		<div class="row slideanim">
 			<div class="col-sm-6 col-md-4">
 				<a href="servico-drywall.html">
-					<img src="img/servicos/parede-em-drywall-1024x776.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
+					<img src="img/servicos/01452105078-Massa-Corrida-Acrilica.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Drywall (paredes)</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
 			<div class="col-sm-6 col-md-4">
 				<a href="servico-drywall.html">
-					<img src="img/servicos/11899806_165003287164868_2547394956092515925_n.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
+					<img src="img/servicos/teto-forro-decorado.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Teto de gesso decorado</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
 			<div class="col-sm-12 col-md-4">
 				<a href="servico-drywall.html">
-					<img src="img/servicos/rebaixamento-de-pvc-767212.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
+					<img src="img/servicos/DSCN1862.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Rebaixamento de Pvc</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 		</div>
 
@@ -145,15 +148,17 @@
 					<img src="img/servicos/pvc-decotativo.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Pvc decorativos</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
 			<div class="col-sm-6 col-md-4">
 				<a href="servico-drywall.html">
-					<img src="img/servicos/gesso-ou-drywall.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
+					<img src="img/servicos/owa_foto5_g.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Forros removíveis</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
 			<div class="col-sm-12 col-md-4">
@@ -161,7 +166,8 @@
 					<img src="img/servicos/11752566_146395479025649_3723354704819076619_n.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Divisórias</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 		</div>
 
@@ -171,7 +177,8 @@
 					<img src="img/servicos/18274919_463922507272943_7837062606207957635_n.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Iluminaçao led</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
 			<div class="col-sm-6 col-md-4">
@@ -179,7 +186,8 @@
 					<img src="img/servicos/lustre.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Lustres</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 
 			<div class="col-sm-12 col-md-4">
@@ -187,7 +195,8 @@
 					<img src="img/servicos/stell-frame.jpg" class="img-circle img-servicos" alt="Imagem Drywall">
 				</a>
 				<h4 class="titulo-servico">Stell Frame</h4>
-				<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				<br><br>
+				<!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>-->
 			</div>
 		</div>
 	</section>
